Add SEO, AEO and security improvements
- Enhanced meta tags for better search engine visibility
- Added Schema.org structured data for AI answer engines
- Created sitemap.xml for search engine crawling
- Updated robots.txt with AI crawler support
- Added security headers via Netlify configuration
- Implemented CSP, HSTS, and other security measures

--- a/index.html
+++ b/index.html
@@ -3,20 +3,138 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QG1o | Full-Stack Developer</title>
-    <meta name="description" content="Over 20 years of IT experience. Passionate about web development, IT administration, and cybersecurity. Building modern web applications with React, Next.js, and the PERN stack." />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Primary Meta Tags (SEO) -->
+    <title>QG1o | Full-Stack Developer - React, TypeScript & PERN Stack Expert</title>
+    <meta name="title" content="QG1o | Full-Stack Developer - React, TypeScript & PERN Stack Expert" />
+    <meta name="description" content="Full-Stack Developer with 20+ years IT experience specializing in React, TypeScript, Node.js, and the PERN stack. Expert in web development, IT administration, and cybersecurity. Available for freelance projects." />
     <meta name="author" content="QG1o" />
+    <meta name="keywords" content="Full-Stack Developer, React Developer, TypeScript, Node.js, PERN Stack, PostgreSQL, Express.js, Web Development, Frontend Developer, Backend Developer, Freelance Developer, IT Administration, Cybersecurity" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <link rel="canonical" href="https://qg1o2.netlify.app/" />
 
-    <meta property="og:title" content="QG1o | Full-Stack Developer" />
-    <meta property="og:description" content="Over 20 years of IT experience. Passionate about web development, IT administration, and cybersecurity. Building modern web applications with React, Next.js, and the PERN stack." />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://qg1o2.netlify.app/" />
+    <meta property="og:title" content="QG1o | Full-Stack Developer - React, TypeScript & PERN Stack Expert" />
+    <meta property="og:description" content="Full-Stack Developer with 20+ years IT experience specializing in React, TypeScript, Node.js, and the PERN stack. Available for freelance projects." />
+    <meta property="og:image" content="https://qg1o2.netlify.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="QG1o Portfolio" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://qg1o2.netlify.app/" />
+    <meta name="twitter:title" content="QG1o | Full-Stack Developer - React, TypeScript & PERN Stack Expert" />
+    <meta name="twitter:description" content="Full-Stack Developer with 20+ years IT experience specializing in React, TypeScript, Node.js, and the PERN stack. Available for freelance projects." />
+    <meta name="twitter:image" content="https://qg1o2.netlify.app/og-image.png" />
     <meta name="twitter:site" content="@QG1o_" />
+    <meta name="twitter:creator" content="@QG1o_" />
 
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+
+    <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-32x32.png" />
+
+    <!-- Preconnect for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Schema.org JSON-LD for AEO (Answer Engine Optimization) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "QG1o",
+      "url": "https://qg1o2.netlify.app/",
+      "jobTitle": "Full-Stack Developer",
+      "description": "Full-Stack Developer with 20+ years IT experience specializing in React, TypeScript, Node.js, and the PERN stack.",
+      "knowsAbout": [
+        "React",
+        "TypeScript",
+        "JavaScript",
+        "Node.js",
+        "PostgreSQL",
+        "Express.js",
+        "HTML5",
+        "CSS3",
+        "Tailwind CSS",
+        "Next.js",
+        "Web Development",
+        "IT Administration",
+        "Cybersecurity"
+      ],
+      "sameAs": [
+        "https://github.com/QG1o",
+        "https://twitter.com/QG1o_"
+      ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "QG1o Portfolio",
+      "url": "https://qg1o2.netlify.app/",
+      "description": "Portfolio website of QG1o, a Full-Stack Developer specializing in React, TypeScript, and the PERN stack.",
+      "author": {
+        "@type": "Person",
+        "name": "QG1o"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "name": "Portfolio Projects",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "item": {
+            "@type": "SoftwareApplication",
+            "name": "Product Store App",
+            "description": "Full-stack PERN application with authentication, REST API, and complete CRUD functionality for product management.",
+            "applicationCategory": "WebApplication",
+            "operatingSystem": "Web"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "item": {
+            "@type": "WebSite",
+            "name": "Portfolio Website 3",
+            "description": "Modern portfolio website with sleek design and interactive elements.",
+            "url": "https://qg1o.netlify.app/"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "item": {
+            "@type": "WebSite",
+            "name": "Portfolio Website 2",
+            "description": "Responsive portfolio showcasing web development skills with clean design and smooth animations.",
+            "url": "https://qg1o.github.io/portfolio2/"
+          }
+        }
+      ]
+    }
+    </script>
   </head>
 
   <body>
